# bongo-dog

./: .gitignore  README.md  bongodog.py  package.json
.cursor/rules/: 01_Stats.md
bongodog/: README.md  package-lock.json
bongodog/src-tauri/: tauri.conf.json
bongodog/src-tauri/src/: lib.rs  main.rs
bongodog/ui/: index.html
excecutable/BongoDog.app/Contents/: Info.plist
excecutable/BongoDog.app/Contents/Resources/: BongoDog.icns
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
